# Bilibili-DG-Lectures

Lecture1_DG1D_scalar/: L2_Pro.m  Lh.m  RK3.m  get_basis.m  init_data.m  main.m  octave-workspace
Lecture2_DG1D_scalar+TVD/: RK3.m  TVD_Limiter.m  init_data.m
Lecture4_DG1D_system/: L2_Pro.m  Lh.m  RK3.m  f1.m  f2.m  get_basis.m  init_data.m  main.m
Lecture6_Euler2D/: CMakeLists.txt
